# cityjson-vue-components-rust

./: .gitignore  README.md  docs.md  index.html  package-lock.json  package.json
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/cityjson/: get_attributes.rs  mod.rs  to_bufferattributes.rs
js/: App.vue  ThreeJsExample.vue  ThreeJsViewer.vue
