[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Parcel project!"
license = "Apache-2.0/MIT"
name = "rust-parcel"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-parcel-template"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = { version = "0.2.29", features = ["serde-serialize"] }
js-sys = "0.3.46"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde-wasm-bindgen = "0.1.3"
phf = { version = "0.8.0", features = ["macros"] }
lazy_static = "1.4.0"
wasm-bindgen-futures = "0.4.19"
wasm-tracing-allocator = "0.1.0"
intervaltree = "0.2.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'Blob'
]

[features]
default = ["console_error_panic_hook"]
